--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-.active {
-    border-bottom: 2px solid #000;
-    color: #000;
-}
+
 
 body {
-    font-family: "Montserrat", serif;
+  font-family: "Montserrat", serif;
+  /* scroll-behavior: smooth; */
 }
