--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,3 +62,12 @@
     transition-duration: 400ms;
     transition-property: width, left;
 }
+
+
+@media screen and (max-width: 768px) {
+
+    .active:after,
+    .nav-special:hover:after {
+        width: 0;
+    }
+}
